still fixing whitespace

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,5 +1,6 @@
 body, HTML {
     height: 100%;
+    width: 100%;
     margin: 0;
 }
 
